--- a/index.html
+++ b/index.html
@@ -3,17 +3,39 @@
 <head>
 <title>Naver - Personalize</title>
 <meta charset="utf-8">
+<style>
+    a {
+        color:black;
+        text-decoration: none;
+    }
+    h1 {
+        text-align:center;
+        font-size:xx-large;
+    }
+    h2 {
+        font-size:x-large;
+    }
+    ol {
+        font-size:small;
+    }
+    .saw {
+        color:gray;
+    }
+</style>
 </head>
 
 <body>
-    <div style="text-align:center"><h1><a href="https://shopping.naver.com/home" target="_blank" title="네이버쇼핑 바로가기">네이버쇼핑 <strong>검색시스템 개편</strong></a></h1></div>
+<!--
+    <div style="text-align:center"><h1><a href="https://shopping.naver.com/home" target="_blank" title="네이버쇼핑 바로가기"><font color="Green">네이버쇼핑</font> <strong>검색시스템 개편</strong></a></h1></div>
+-->
+    <h1><a href="index.html" title="홈">네이버쇼핑 <strong>검색시스템 개편</strong></a></h1>
     <p style="margin-top:40px;"></p>
     <ol>
-        <div style="line-height:10%"></span><h2><li><a href="문제제기.html">문제제기</a></li></h2></div>
+        <div style="line-height:10%"></span><h2><li><a href="문제제기.html" class="saw">문제제기</a></li></h2></div>
             <ol type="I">
                 <div style="margin-bottom:40px;"><li><span style="font-size:1.3em">실제 최저가와 표기된 최저가의 괴리</span></span></li></div>
             </ol>
-        <div style="line-height:10%"><h2><li><a href="해결방안.html">해결방안</a></li></h2></div>
+        <div style="line-height:10%"><h2><li><a href="해결방안.html" class="saw">해결방안</a></li></h2></div>
             <ol type="I">
                 <div style="margin-bottom:40px;"><li><span style="font-size:1.3em">Personalize 된 데이터로 Personalization</span></li></div>
             </ol>
@@ -28,6 +50,7 @@
 퍼스널라이즈화가 필요하다고 생각함
 <p>단락바꾸기?</p>
 <p style="margin-top:100px;">단락이뭔가요</p>
+<p><iframe width="560" height="315" src="https://www.youtube.com/embed/OGFgdro160I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
 <img src="cat.jpg" width="300">
 </body>
 </HTML>
