--- a/제한사항.html
+++ b/제한사항.html
@@ -3,10 +3,29 @@
 <head>
 <title>Naver - Personalize</title>
 <meta charset="utf-8">
+<style>
+    a {
+        color:red;
+        text-decoration: none;
+    }
+    h1 {
+        text-align:center;
+        font-size:xx-large;
+    }
+    h2 {
+        font-size:x-large;
+    }
+    ol {
+        font-size:small;
+    }
+</style>
 </head>
 
 <body>
-    <div style="text-align:center"><h1><a href="https://shopping.naver.com/home" target="_blank" title="네이버쇼핑 바로가기">네이버쇼핑 <strong>검색시스템 개편</strong></a></h1></div>
+<!--
+    <div style="text-align:center"><h1><a href="https://shopping.naver.com/home" target="_blank" title="네이버쇼핑 바로가기"><font color="Green">네이버쇼핑</font> <strong>검색시스템 개편</strong></a></h1></div>
+-->
+    <h1><a href="index.html" title="홈">네이버쇼핑 <strong>검색시스템 개편</strong></a></h1>
     <p style="margin-top:40px;"></p>
     <ol>
         <div style="line-height:10%"></span><h2><li><a href="문제제기.html">문제제기</a></li></h2></div>
